improved features in form validation

--- a/project-phase-1/travelplanner.html
+++ b/project-phase-1/travelplanner.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- Navigation Bar -->
+    <!-- Dropdown Navigation Menu -->
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
@@ -68,10 +68,14 @@
             </li>
         </ul>
     </nav>
+
+    <!-- Cover Section -->
     <section class="planner-cover-section">
         <h1>Get a trip planned just for you</h1>
         <button><a href="./travelplannerequest.html">Request Travel Planning</a></button>
     </section>
+
+    <!-- Planner Itinerary -->
     <section class="planner-itinerary">
         <div class="planner-itinerary-head">
             <h2>Custom Travel Itinerary</h2>
@@ -99,6 +103,8 @@
             </div>
         </div>
     </section>
+
+    <!-- How it works -->
     <section class="planner-work">
         <div class="planner-work-head">
             <h2>How it works</h2>
@@ -118,6 +124,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Testimonial Slider -->
     <section class="planner-testimonials">
         <div class="testimonial-swiper">
             <div class="swiper-wrapper">
@@ -180,6 +188,7 @@
         </div>
     </section>
 
+    <!-- Footer Section -->
     <footer class="footer-basic">
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
