--- a/project-phase-1/localguides.html
+++ b/project-phase-1/localguides.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Dropdown Navigation Menu -->
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
@@ -65,6 +66,8 @@
             </li>
         </ul>
     </nav>
+
+    <!--  Cover Image Section -->
     <section class="guide-cover-section">
         <div class="guide-cover-inner-container">
             <h1>Ready to discover tailor made-travel?</h1>
@@ -72,6 +75,7 @@
             <button><a href="#guide">Plan my Trip &rarr;</a></button>
         </div>
     </section>
+
     <section class="guide-served-section" id="guide">
         <div class="guide-served">
             <h1>14926</h1>
@@ -80,11 +84,14 @@
                 destination</p>
         </div>
     </section>
+
+    <!-- Local Guides -->
     <section class="tour-guides">
         <div class="tour-guide-head">
             <h2>Local Tour Guides</h2>
         </div>
         <div class="tour-guide-container">
+            <!-- Guide Profiles -->
             <div class="tour-guide-card-box">
                 <div class="tour-guide-card">
                     <h3>Ashwin Kumar <span class="rating">4.5</span></h3>
@@ -163,6 +170,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Top Destinations -->
     <section class="top-destinations">
         <div class="top-destination-head">
             <h2>Top Destinations</h2>
@@ -186,6 +195,8 @@
             </div>
         </div>
     </section>
+
+    <!-- FAQ Section -->
     <section class="local-guide-faq">
         <div class="local-guide-faq-head">
             <h2>FAQs</h2>
@@ -282,6 +293,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer class="footer-basic">
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
