--- a/project-phase-1/travelplannerequest.html
+++ b/project-phase-1/travelplannerequest.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,10 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
+    <!-- Dropdown Navigation Menu -->
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
@@ -63,6 +67,8 @@
             </li>
         </ul>
     </nav>
+
+    <!-- Planner Request Form -->
     <section class="planner-request-form">
         <div class="planner-request-form-head">
             <h1>Travel Planning Service Request</h1>
@@ -73,22 +79,27 @@
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" name="name" id="name" placeholder="Enter your name">
+                    <div class="invalid-feedback">Please enter a valid name</div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email" placeholder="Enter your email">
+                    <div class="invalid-feedback">Please enter a valid email</div>
                 </div>
                 <div class="form-group">
                     <label for="tel">Phone:</label>
                     <input type="tel" name="tel" id="tel" placeholder="Enter your Phone number">
+                    <div class="invalid-feedback">Your phone number should be 10 digit long</div>
                 </div>
                 <div class="form-group">
                     <label for="trip-start-date">Trip Start Date:</label>
-                    <input type="date" name="trip-start-date" id="trip-start-date">
+                    <input type="date" name="trip-start-date" id="trip-start-date" min="">
+                    <div class="invalid-feedback">Please enter a valid date</div>
                 </div>
                 <div class="form-group">
                     <label for="trip-end-date">Trip End Date:</label>
-                    <input type="date" name="trip-end-date" id="trip-end-date">
+                    <input type="date" name="trip-end-date" id="trip-end-date" min="">
+                    <div class="invalid-feedback">Please enter a valid date</div>
                 </div>
                 <div class="form-group">
                     <label for="location">Desired Location(s):</label>
@@ -99,11 +110,17 @@
                     <textarea name="message" id="message" cols="30" rows="7"></textarea>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Submit">
+                    <input type="submit" id="submit" value="Submit">
                 </div>
             </form>
         </div>
     </section>
+
+    <div id="alert">
+    </div>
+
+
+    <!-- Footer Section -->
     <footer class="footer-basic">
         <div class="social">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -121,4 +138,6 @@
         <p class="copyright">Copyright &copy; Mosaic Planners 2021 | All Rights Reserved</p>
     </footer>
 </body>
+<script src="index.js"></script>
+
 </html>
