--- a/project-phase-1/touristpackages.html
+++ b/project-phase-1/touristpackages.html
@@ -124,162 +124,8 @@
         <div class="tour-head">
             <h2>Let's create your dream tour to India</h2>
         </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/srinagar.jpg" alt="">
-                    <p>India | 4 days</p>
-                    <h3>Srinagar: The Land of Lakes</h3>
-                    <p>Enjoy the sunrise at Dal Lake, Visit Shalimar Bagh, Mughal Gardens, Enjoy the ride in House Boat
-                    </p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 14999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/amritsar.jpg" alt="">
-                    <p>India | 2 days</p>
-                    <h3>Punjab: The Holy City</h3>
-                    <p>Visit the Golden Temple, Pay Tribute at Jallianwala Bagh, Experience the Patriotism at Wagah
-                        Border</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 6999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/delhi.jpg" alt="">
-                    <p>India | 5 days</p>
-                    <h3>Delhi: Explore the Capital</h3>
-                    <p>Walking Tour in Old Delhi, Full Day Qutb Minar, Visit Lotus Temple, Red Fort</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 15499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/agra.jpg" alt="">
-                    <p>India | 3 days</p>
-                    <h3>Agra: Visit the Taj</h3>
-                    <p>Visit the iconic Taj Mahal, Agra Fort, Enjoy the Heritage at Fatehpur Sikri</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 8999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-        </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/rajasthan.jpg" alt="">
-                    <p>India | 3 days</p>
-                    <h3>Rajasthan: Historal Forts and Palaces</h3>
-                    <p>Boating to Jag Mandir, Luxury weekend in Jaipur, Chittor Fort, Hawa Mahal, Light and Sound Show
-                    </p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 7499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/kolkata.jpg" alt="">
-                    <p>India | 4 days</p>
-                    <h3>Kolkata: City of Joy</h3>
-                    <p>Feel Royal at Fort William, Howrah Bridge, Visit Victoria Memorial, Explore Indian Museum</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 12499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/assam.jpg" alt="">
-                    <p>India | 2 days</p>
-                    <h3>Assam: Land of Blue Hills</h3>
-                    <p>Early Morning drive to Kaziranga National Park, Take Ferry for Majuli River Island, Guwahati
-                        Planetarium</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 6999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/sikkim.jpg" alt="">
-                    <p>India | 3 days</p>
-                    <h3>Sikkim: Land of Peace</h3>
-                    <p>Alluring Charm at Gantok, Enthralling treks into the Himalayas, Tsomgo Lake, Historic ‘Silk Road’
-                        Nathu La</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 8699 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-        </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/goa.jpg" alt="">
-                    <p>India | 5 days</p>
-                    <h3>Goa: Pearl of the Orient</h3>
-                    <p>Enjoy the sunset at Cruise, Visit Fort Aguada, Enjoy water sports at Calangute Beach</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 16999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/mumbai.jpg" alt="">
-                    <p>India | 6 days</p>
-                    <h3>Mumbai: City of Dreams</h3>
-                    <p>Visit The Gateway of India, Sunset on Marine Drive, Tour to Elephanta Caves, Red Carpet Wax
-                        Museum</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 17999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/kerela.jpg" alt="">
-                    <p>India | 3 days</p>
-                    <h3>Kerala: God's Own Country</h3>
-                    <p>The Backwater Hot Spot Alleppey, Heavenly Trails at Wayanad, Enjoy the Love Of Wildlife at
-                        Thekkady</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 9999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/tamil nadu.jpg" alt="">
-                    <p>India | 2 days</p>
-                    <h3>Tamil Nadu: City of Temples</h3>
-                    <p>Enjoy the peace at Rameshwaram, Queen of Hills Ooty, Auroville, Yercaud</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 5999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
+        <div class="tour-card-box" id="tour-packages">
+           <!-- Dynamically loading data from JSON file -->
         </div>
     </section>
 
@@ -288,58 +134,8 @@
         <div class="tour-head">
             <h2>Luxury Tours | Enjoy Luxury Vacations</h2>
         </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/luxury-1.jpg" alt="">
-                    <p>India | 10 days</p>
-                    <h3>Golden Triangle Tour</h3>
-                    <p>Adventure through the highlights of the exotic ancient marvels of Delhi, Jaipur & Agra</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 23999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/luxury-2.jpg" alt="">
-                    <p>India | 8 days</p>
-                    <h3>Southern India & Udaipur</h3>
-                    <p>Experience India's vibrant southern cities and follow in the footsteps of ancient civilizations
-                    </p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 19999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/luxury-3.jpg" alt="">
-                    <p>India | 11 days</p>
-                    <h3>India Grand Journey</h3>
-                    <p>Journey around the country and visit its historical and spiritual centers and vibrant Delhi and
-                        Mumbai</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 21499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/luxury-4.jpg" alt="">
-                    <p>India | 7 days</p>
-                    <h3>Sikkim and Bhutan Highlights</h3>
-                    <p>Delight in a journey into the Himalayas, combining the mysteries and breathtaking vistas of
-                        Bhutan</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 18999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
+        <div class="tour-card-box" id=luxury-packages>
+           <!-- Dynamically loading data from JSON file -->
         </div>
     </section>
 
@@ -348,55 +144,8 @@
         <div class="tour-head">
             <h2>Adventure Tours | Enjoy the Thrill</h2>
         </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/adventure-1.jpg" alt="">
-                    <p>India | 8 days</p>
-                    <h3>Shimla Leh Ladakh Tour</h3>
-                    <p>Mesmerizing Moon landscapes, Adventure activities and Road Excursion to Rohtang Pass</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 16999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/adventure-2.jpg" alt="">
-                    <p>India | 10 days</p>
-                    <h3>Rishikesh Tour from Jaipur</h3>
-                    <p>Enjoy Rapid Rafting at Rishikesh, Camp Stay, Visiting the attractions</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 20499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/adventure-3.jpg" alt="">
-                    <p>India | 11 days</p>
-                    <h3>Gangtok Lachen Tour</h3>
-                    <p>Visit famous Nathu La Pass, Explore the surreal Singhik View Point, Visit Famous Tsomgo Lake</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 22999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/adventure-4.jpg" alt="">
-                    <p>India | 6 days</p>
-                    <h3>Lakshadweep Tour from Kerela</h3>
-                    <p>Enjoy boat cruise, Visit Chinese fishing nets, Enjoy water activities at Bangaram</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 15999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
+        <div class="tour-card-box" id="adventure-packages">
+           <!-- Dynamically loading data from JSON file -->
         </div>
     </section>
 
@@ -405,55 +154,8 @@
         <div class="tour-head">
             <h2>Wildlife Travel | Look Deep into Nature</h2>
         </div>
-        <div class="tour-card-box">
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/wildlife-1.jpg" alt="">
-                    <p>India | 5 days</p>
-                    <h3>Gir and Diu</h3>
-                    <p>Enjoy the safari at Gir National Park, Visit Nagoa Beach, St Paul's Church and much more</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 13999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/wildlife-2.jpg" alt="">
-                    <p>India | 7 days</p>
-                    <h3>Rathambore Adventure Tour</h3>
-                    <p>Rathambore National Park, Ganesh Temple, Rathambore Fort, Jeep Ride</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 16999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/wildlife-3.jpg" alt="">
-                    <p>India | 9 days</p>
-                    <h3>Nainital, Corbett and Mussoorie Package</h3>
-                    <p>Jeep Ride, Eco Cave Garden, Nainital Zoo, Jim Corbett National Park, Naini Lake</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 21999 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
-            <div class="tour-card">
-                <div class="inner-tour-content-card">
-                    <img src="./images/wildlife-4.jpg" alt="">
-                    <p>India | 7 days</p>
-                    <h3>Sundarban Wildlife Expedition</h3>
-                    <p>Sunrise to Sunset Main Focus on Tiger Tracking, Birding, Tribal Dance, Thrilling boat safari</p>
-                </div>
-                <div class="inner-tour-price-card">
-                    <p>from <span class="price">₹ 17499 </span>per person </p>
-                    <button>Book Now</button>
-                </div>
-            </div>
+        <div class="tour-card-box" id="wildlife-packages">
+           <!-- Dynamically loading data from JSON file -->
         </div>
     </section>
 
