--- a/project-phase-1/localguides.html
+++ b/project-phase-1/localguides.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
-                <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
+                <a href="./index.html"><img src="./images/logo.png" alt="Mosaic Planner Logo" srcset=""></a>
                 <h2>Mosaic Planners</h2>
             </div>
             <div class="nav-button-container">
@@ -90,84 +90,9 @@
         <div class="tour-guide-head">
             <h2>Local Tour Guides</h2>
         </div>
-        <div class="tour-guide-container">
+        <div class="tour-guide-container" id="local-guides-container">
             <!-- Guide Profiles -->
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Ashwin Kumar <span class="rating">4.5</span></h3>
-                    <ul>
-                        <li>Focuses on unique cultural experiences</li>
-                        <li>Familiar with Volunteerism and Charity driven tours</li>
-                        <li>Qualified in North and South India</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_1.jpg" alt="">
-            </div>
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Balbir Singh <span class="rating">4.4</span></h3>
-                    <ul>
-                        <li>Religious (Recommends to explore Amritsar)</li>
-                        <li>Family and group tours to North India</li>
-                        <li>Loves to Chat/Talk</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_2.jpg" alt="">
-            </div>
-        </div>
-        <div class="tour-guide-container">
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Divya Sharma <span class="rating">4.6</span></h3>
-                    <ul>
-                        <li>Mystic Mountain Tour of Leh & Ladakh</li>
-                        <li>Trekking Tour</li>
-                        <li>Tribal Tour</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_3.jpg" alt="">
-            </div>
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Rohit Sharma <span class="rating">4.5</span></h3>
-                    <ul>
-                        <li>Cultural Tours</li>
-                        <li>Family Tours</li>
-                        <li>Off Beat Tours</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_4.jpg" alt="">
-            </div>
-        </div>
-        <div class="tour-guide-container">
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Shubham Gupta <span class="rating">4.3</span></h3>
-                    <ul>
-                        <li>Niche and Special interest</li>
-                        <li>Wildlife and Nature</li>
-                        <li>Tours focused on community development</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_5.jpg" alt="">
-            </div>
-            <div class="tour-guide-card-box">
-                <div class="tour-guide-card">
-                    <h3>Vishal Mishra <span class="rating">4.6</span></h3>
-                    <ul>
-                        <li>Experiential Travel</li>
-                        <li>Offbeat Destinations</li>
-                        <li>Bespoke Travel</li>
-                    </ul>
-                    <button>Request your Travel</button>
-                </div>
-                <img src="./images/guide_7.jpg" alt="">
-            </div>
+            
         </div>
     </section>
 
