--- a/project-phase-1/travelplanner.html
+++ b/project-phase-1/travelplanner.html
@@ -72,7 +72,7 @@
     <!-- Cover Section -->
     <section class="planner-cover-section">
         <h1>Get a trip planned just for you</h1>
-        <button><a href="./travelplannerequest.html">Request Travel Planning</a></button>
+        <button><a href="./travelplannerrequest.html">Request Travel Planning</a></button>
     </section>
 
     <!-- Planner Itinerary -->
@@ -128,62 +128,8 @@
     <!-- Testimonial Slider -->
     <section class="planner-testimonials">
         <div class="testimonial-swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar1.png" alt="" srcset="">
-                    <h3>Akash Kumar</h3>
-                    <p>Just got back from a wonderful trip and it was a great experience overall. The travel
-                        designer was easy to work with from the beginning. We received multiple
-                        itineraries from multiple groups, but the one from this company was the most flexible. Since
-                        ours was a private tour, the travel designer took the time to customize the schedule so we get
-                        to see the most we can while still feeling rested and relaxed.</p>
-                </div>
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar2.png" alt="" srcset="">
-                    <h3>Priyank Sharma</h3>
-                    <p>This was our first trip and the experience could not have turned out better. First, the agents
-                        that they recommended were attentive and experienced in their efforts to determine what we
-                        wanted out of our trip and to make it happen to meet our expectations. The most difficult part
-                        of the planning process was having to make a choice of which agent to choose. They were both
-                        excellent in their planning and their proposals.</p>
-                </div>
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar3.png" alt="" srcset="">
-                    <h3>Raghu Suri</h3>
-                    <p>Our trip was truly a once-in-a-lifetime experience and we are so grateful to everyone
-                        that made it happen seamlessly. Our travel planner, Rahul was incredible. After reading our
-                        initial request and speaking with us on the phone, he designed a tour perfectly custom to what
-                        our interests were. He was always prompt and thorough in his responses and we felt very
-                        comfortable taking his recommendations</p>
-                </div>
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar4.png" alt="" srcset="">
-                    <h3>Ridhi Dogra</h3>
-                    <p>Mosaic Planers organised our visit to Kerala. They put together an itinerary that suited us. We
-                        wanted to be more off the beaten track but still comfortable. Our stays at coffee and tea
-                        plantations, safari lodge, a beach resort and houseboat on the North Kerala backwaters, were
-                        delightful and exceeded our expectations. The underlying organisation of the trip meant we had
-                        no worries about where we should be and how we should get there.</p>
-                </div>
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar5.png" alt="" srcset="">
-                    <h3>Sanjay Kumar</h3>
-                    <p>We had a wonderful holiday in Rajasthan which will remain long in the memory. India is a
-                        breathtakingly beautiful country full of splendid temples and palaces, noise and colour,
-                        peaceful rural scenes and most of all friendly welcoming people. We stayed in some amazing
-                        hotels and had brilliant guides who made us feel like friends. Even the noise and bustle is an
-                        experience in itself and we enjoyed the contrast between the busy streets, quiet hotels and
-                        rural experiences.</p>
-                </div>
-                <div class="swiper-slide">
-                    <img class="testimonial-slider-image" src="./images/avatar6.png" alt="" srcset="">
-                    <h3>Neha Sharma</h3>
-                    <p>We started with a few days in Mumbai & ended in Delhi, from where we visited the Taj Mahal. In
-                        between we visited Bhopal and Satpura and Kanha National Parks. It was a good mixture given the
-                        contrast between the busy cities & quiet beautiful national parks. We particularly liked the
-                        peacefulness & variety of wildlife in the countryside. The accommodation & guides were excellent
-                        throughout our stay.</p>
-                </div>
+            <div class="swiper-wrapper" id="review-slider">
+                <!-- Dynamically loaded data from JSON file -->
             </div>
         </div>
     </section>
