Adding the Register feature

--- a/Colaborate/HomePage.html
+++ b/Colaborate/HomePage.html
@@ -30,7 +30,7 @@
         <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
             <ul>
                 <li><a href="">Event Booking</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="">About US</a></li>
                 <li><a href="">Help Desk</a></li>
             </ul>
         </li>
