--- a/collaborate/HomePage.html
+++ b/collaborate/HomePage.html
@@ -30,7 +30,7 @@
         <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
             <ul>
                 <li><a href="">Event Booking</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="">About US</a></li>
                 <li><a href="">Help Desk</a></li>
             </ul>
         </li>
@@ -61,7 +61,7 @@
             <ul>
                 <li><a href="./touristpackages.html">Tourist Packages</a></li>
                 <li><a href="./localguides.html">Local Guides</a></li>
-                <li><a href="./travelplanner.html">Personal Travel Planner</a></li>
+                <li><a href="./travelplanner">Personal Travel Planner</a></li>
             </ul>
         </li>
     </ul>
