--- a/collaborate/HomePage.html
+++ b/collaborate/HomePage.html
@@ -21,7 +21,7 @@
             <h2>Mosaic Planners</h2>
         </div>
         <div class="nav-button-container">
-            <a href="../SignUp/SignUp.html"><button >Register</button></a>
+            <a href="SignUp.html"><button >Register</button></a>
             
             <button id="review-add-btn2">Sign In</button>
         </div>
@@ -29,7 +29,7 @@
     <ul class="navbar-bottom">
         <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
             <ul>
-                <li><a href="">Event Booking</a></li>
+                <li><a href="HomePage.html">Event Booking</a></li>
                 <li><a href="">About US</a></li>
                 <li><a href="">Help Desk</a></li>
             </ul>
