--- a/collaborate/SignUp.html
+++ b/collaborate/SignUp.html
@@ -9,7 +9,7 @@
     <title>SignUp</title>
 </head>  
 <body>
-    
+  <div class="area" >
     <div id="login-box">
         <div class="left">
           <h1>Sign up</h1>
@@ -38,8 +38,21 @@
         <div class="or">OR</div>
       </div>
       <script src="SignUp.js"></script>
-
-</body>
+     
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+</div >
+     </body>
 </html>
 
 
