--- a/collaborate/booknow.html
+++ b/collaborate/booknow.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/motel/css/booknow.css">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script> 
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='styleshee' type='text/css'>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />		
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-	 <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="./css/booknow.css">
+	 <link rel="stylesheet" href="./css/main.css">
     <title>Motel Booking</title>
 </head>
-<body background="/images/1s3.jfif"> 
+<body background="./images/1s3.jfif"> 
     <nav>
         <div class="navbar-top">
            <div class="nav-inner-container">
-              <a href="./index.html"><img src="/images/logo.png" alt="" srcset=""></a>
+              <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
               <h2>Mosaic Planners</h2>
-           </div>
-           <div class="nav-button-container">
-              <button>Register</button>
-              <button>Sign In</button>
            </div>
         </div>
         <ul class="navbar-bottom">
@@ -43,9 +40,9 @@
            </li>
            <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
               <ul>
-                 <li><a href="/HotelBooking.html">Hotel Booking</a></li>
-                 <li><a href="/MotelBooking.html">Motel Booking</a></li>
-                 <li><a href="/rentalapartments.html">Rental Apartments</a></li>
+                 <li><a href="./HotelBooking.html">Hotel Booking</a></li>
+                 <li><a href="./MotelBooking.html">Motel Booking</a></li>
+                 <li><a href="./rentalapartments.html">Rental Apartments</a></li>
               </ul>
            </li>
            <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
@@ -158,8 +155,8 @@
         </script>
         <footer>
             <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-snapchat"></a>
             <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
             <a href="#" class="fa fa-facebook"></a>
                <ul class="list-inline">
                     <li class="list-inline-item"><a href="#">Home</a></li>
