--- a/collaborate/feedback.html
+++ b/collaborate/feedback.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <title>Document</title>
-    <link rel="stylesheet" href="/hotel/Feedback/feedback.css">
+    <link rel="stylesheet" href="./css/feedback.css">
 
 </head>
 <body>
@@ -34,6 +35,6 @@
   </div>
   
   <button id="popup" class="feedback-button" onclick="toggle_visibility()">Feedback</button>
-  <script src="/hotel/Feedback/feedback.js"></script>
+  <script src="./js/feedback.js"></script>
 </body>
 </html>
