--- a/collaborate/gallery.html
+++ b/collaborate/gallery.html
@@ -1,27 +1,26 @@
 <!doctype html>
 <html>
+
 <head>
-<link rel="stylesheet" href="/motel/css/gallery.css">
-<script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script> 
-        <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='styleshee' type='text/css'>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />		
-	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-	    <link rel="stylesheet" href="/styles/main.css">
-        <link rel="stylesheet" href="/styles/motel.css">
-        <link rel="stylesheet" href="/styles/hotel.css">
-<title>Motel sGallery
-</title>
+    <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='styleshee' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/motel.css">
+    <link rel="stylesheet" href="./css/hotel.css">
+    <title>Motel Gallery</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <nav>
         <div class="navbar-top">
             <div class="nav-inner-container">
-                <a href="./index.html"><img src="/images/logo.png" alt="" srcset=""></a>
+                <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
                 <h2>Mosaic Planners</h2>
-            </div>
-            <div class="nav-button-container">
-                <button>Register</button>
-                <button>Sign In</button>
             </div>
         </div>
         <ul class="navbar-bottom">
@@ -43,9 +42,9 @@
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                 <ul>
-                    <li><a href="/HotelBooking.html">Hotel Booking</a></li>
-                    <li><a href="/MotelBooking.html">Motel Booking</a></li>
-                    <li><a href="/rentalapartments.html">Rental Apartments</a></li>
+                    <li><a href="./HotelBooking.html">Hotel Booking</a></li>
+                    <li><a href="./MotelBooking.html">Motel Booking</a></li>
+                    <li><a href="./rentalapartments.html">Rental Apartments</a></li>
                 </ul>
             </li>
             <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
@@ -65,29 +64,30 @@
         </ul>
     </nav>
 
-<div class="gallery">
-    <h1>Mosaic Gallery</h1>
-<a href="/images/g1.jpg"><img src="/images/g1.jpg"></a>
-<a href="/images/g2.jpg"><img src="/images/g2.jpg"></a>
-<a href="/images/g3.jpg"><img src="/images/g3.jpg"></a>
-<a href="/images/g4.jpg"><img src="/images/g4.jpg"></a>
-<a href="/images/g5.jpg"><img src="/images/g5.jpg"></a>
-<a href="/images/g6.jpg"><img src="/images/g6.jpg"></a>
-</div>
+    <div class="gallery">
+        <h1>Mosaic Gallery</h1>
+        <a href="./images/g1.jpg"><img src="./images/g1.jpg"></a>
+        <a href="./images/g2.jpg"><img src="./images/g2.jpg"></a>
+        <a href="./images/g3.jpg"><img src="./images/g3.jpg"></a>
+        <a href="./images/g4.jpg"><img src="./images/g4.jpg"></a>
+        <a href="./images/g5.jpg"><img src="./images/g5.jpg"></a>
+        <a href="./images/g6.jpg"><img src="./images/g6.jpg"></a>
+    </div>
 
-<footer>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-snapchat"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-facebook"></a>
-       <ul class="list-inline">
+    <footer>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-facebook"></a>
+        <ul class="list-inline">
             <li class="list-inline-item"><a href="#">Home</a></li>
             <li class="list-inline-item"><a href="#">Services</a></li>
             <li class="list-inline-item"><a href="#">About</a></li>
             <li class="list-inline-item"><a href="#">Terms</a></li>
             <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
         </ul>
-        <p>Mosaic  Planners  ©  2021</p>
-</footer>	
+        <p>Mosaic Planners © 2021</p>
+    </footer>
 </body>
+
 </html>
