--- a/collaborate/reception.html
+++ b/collaborate/reception.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/motel/css/reception.css">
+    <link rel="stylesheet" href="./css/reception.css">
 	 <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script> 
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='styleshee' type='text/css'>
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />		
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-	 <link rel="stylesheet" href="/styles/main.css">
+	 <link rel="stylesheet" href="./css/main.css">
  </head>
  <body>  
      <nav>
       <div class="navbar-top">
          <div class="nav-inner-container">
-            <a href="./index.html"><img src="/images/logo.png" alt="" srcset=""></a>
+            <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
             <h2>Mosaic Planners</h2>
          </div>
          <div class="nav-button-container">
@@ -77,7 +77,7 @@
             <input type="text" value ="B" size="6">
          </div> 
          <div class="item3">
-            <img src="/images/i.jpeg" >
+            <img src="./images/i.jpeg" >
             
          </div>
          <div class="item4">
@@ -108,8 +108,8 @@
      <br>
       <footer>
          <a href="#" class="fa fa-instagram"></a>
-         <a href="#" class="fa fa-snapchat"></a>
          <a href="#" class="fa fa-twitter"></a>
+         <a href="#" class="fa fa-linkedin"></a>
          <a href="#" class="fa fa-facebook"></a>
             <ul class="list-inline">
                  <li class="list-inline-item"><a href="#">Home</a></li>
