--- a/collaborate/travelplanner.html
+++ b/collaborate/travelplanner.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -21,10 +20,6 @@
                 <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
                 <h2>Mosaic Planners</h2>
             </div>
-            <div class="nav-button-container">
-                <button>Register</button>
-                <button>Sign In</button>
-            </div>
         </div>
         <div class="menu-btn">
             <div class="menu-btn-burger">
@@ -34,7 +29,7 @@
             <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                 <ul>
                     <li><a href="">Event Booking</a></li>
-                    <li><a href="">Corporate Booking</a></li>
+                    <li><a href="">About Us</a></li>
                     <li><a href="">Help Desk</a></li>
                 </ul>
             </li>
@@ -47,8 +42,8 @@
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                 <ul>
-                    <li><a href="">Hotel Booking</a></li>
-                    <li><a href="">Motel Booking</a></li>
+                    <li><a href="./HotelBooking.html">Hotel Booking</a></li>
+                    <li><a href="./MotelBooking.html">Motel Booking</a></li>
                     <li><a href="">Rental Apartments</a></li>
                 </ul>
             </li>
