--- a/collaborate/MotelBooking.html
+++ b/collaborate/MotelBooking.html
@@ -29,7 +29,7 @@
 		<ul class="navbar-bottom">
 			<li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
 				<ul>
-					<li><a href="">Event Booking</a></li>
+					<li><a href="./homePage.html">Event Booking</a></li>
 					<li><a href="">Corporate Booking</a></li>
 					<li><a href="">Help Desk</a></li>
 				</ul>
@@ -45,8 +45,8 @@
 			</li>
 			<li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
 				<ul>
-					<li><a href="./HotelBooking.html">Hotel Booking</a></li>
-					<li><a href="./MotelBooking.html">Motel Booking</a></li>
+					<li><a href="./hotelBooking.html">Hotel Booking</a></li>
+					<li><a href="./motelBooking.html">Motel Booking</a></li>
 					<li><a href="rentalapartments.html">Rental Apartments</a></li>
 				</ul>
 			</li>
