--- a/projectphrase1/1018index.html
+++ b/projectphrase1/1018index.html
@@ -20,10 +20,6 @@
                     <a href="./index.html"><img src="img/logo.png" alt="" srcset=""></a>
                     <h2>Mosaic Planners</h2>
                 </div>
-                <div class="nav-button-container">
-                    <button>Register</button>
-                    <button>Sign In</button>
-                </div>
             </div>
             <ul class="navbar-bottom">
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
@@ -51,7 +47,7 @@
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="" target="_blank">Flight Booking</a></li>
+                        <li><a href="">Flight Booking</a></li>
                         <li><a href="">Train Booking</a></li>
                         <li><a href="">Roadway Booking</a></li>
                     </ul>
