--- a/collaborate/HomePage.html
+++ b/collaborate/HomePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,227 +9,228 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="logo.png">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="HomePage.css">
-  
+  <link rel="stylesheet" href="./css/homePage.css">
+
 </head>
+
 <body>
   <header>
-  <nav>
-    <div class="navbar-top">
+    <nav>
+      <div class="navbar-top">
         <div class="nav-inner-container">
-            <a href="./index.html"><img src="logo.png" alt="" srcset=""></a>
-            <h2>Mosaic Planners</h2>
+          <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
+          <h2>Mosaic Planners</h2>
         </div>
         <div class="nav-button-container">
-            <a href="SignUp.html" target="_blank"><button >Register</button></a>
-            
-            <button id="review-add-btn2">Sign In</button>
+          <a href="signUp.html" target="_blank"><button>Register</button></a>
+
+          <button id="review-add-btn2">Sign In</button>
         </div>
-    </div>
-    <ul class="navbar-bottom">
+      </div>
+      <ul class="navbar-bottom">
         <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
-            <ul>
-                <li><a href="HomePage.html">Event Booking</a></li>
-                <li><a href="">About US</a></li>
-                <li><a href="">Help Desk</a></li>
-            </ul>
+          <ul>
+            <li><a href="homePage.html">Event Booking</a></li>
+            <li><a href="">About US</a></li>
+            <li><a href="">Help Desk</a></li>
+          </ul>
         </li>
         <li><a href="#" alt="Food"><i class="fas fa-utensils"></i> Food</a>
-            <ul>
-                <li><a href="">Takeway</a></li>
-                <li><a href="">Home Delivery</a></li>
-                <li><a href="">Food Category</a></li>
-                <li><a href="">Helpdesk</a></li>
-                <li><a href="">Virtual Booking</a></li>
-            </ul>
+          <ul>
+            <li><a href="">Takeway</a></li>
+            <li><a href="">Home Delivery</a></li>
+            <li><a href="">Food Category</a></li>
+            <li><a href="">Helpdesk</a></li>
+            <li><a href="">Virtual Booking</a></li>
+          </ul>
         </li>
         <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
-            <ul>
-                <li><a href="">Hotel Booking</a></li>
-                <li><a href="">Motel Booking</a></li>
-                <li><a href="">Rental Apartments</a></li>
-            </ul>
+          <ul>
+            <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+            <li><a href="./motelBooking.html">Motel Booking</a></li>
+            <li><a href="">Rental Apartments</a></li>
+          </ul>
         </li>
         <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
-            <ul>
-                <li><a href="">Flight Booking</a></li>
-                <li><a href="">Train Booking</a></li>
-                <li><a href="">Roadway Booking</a></li>
-            </ul>
+          <ul>
+            <li><a href="">Flight Booking</a></li>
+            <li><a href="">Train Booking</a></li>
+            <li><a href="">Roadway Booking</a></li>
+          </ul>
         </li>
         <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
-            <ul>
-                <li><a href="./touristpackages.html">Tourist Packages</a></li>
-                <li><a href="./localguides.html">Local Guides</a></li>
-                <li><a href="./travelplanner">Personal Travel Planner</a></li>
-            </ul>
+          <ul>
+            <li><a href="./touristpackages.html">Tourist Packages</a></li>
+            <li><a href="./localguides.html">Local Guides</a></li>
+            <li><a href="./travelplanner">Personal Travel Planner</a></li>
+          </ul>
         </li>
-    </ul>
-</nav> 
-</header>
-<main>
-<table>
-    <tr>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <table>
+      <tr>
         <th>
-            <!-- Dropdown to select places -->
-            <select name="Places" id="places">
-              <option value="Banglore">Banglore</option>
-              <option value="Hyderabad">Hyderabad</option>
-              <option value="Delhi">Delhi</option>
-              <option value="Udaipur">Udaipur</option>
-              <option value="Mumbai">Mumbai</option> 
-            </select>
+          <!-- Dropdown to select places -->
+          <select name="Places" id="places">
+            <option value="Banglore">Banglore</option>
+            <option value="Hyderabad">Hyderabad</option>
+            <option value="Delhi">Delhi</option>
+            <option value="Udaipur">Udaipur</option>
+            <option value="Mumbai">Mumbai</option>
+          </select>
         </th>
         <th>
           <!-- Dropdown to select number of guests -->
-            <select name="guest_count" >
-                <option value="1 to 20">Guests: 1 to 20</option>
-                <option value="20 to 50">Guests: 20 to 50</option>
-                <option value="50 to 100">Guests: 50 to 100</option>
-                <option value="100 to 200">Guests: 100 to 200</option>
-                <option value="200 to 500">Guests: 200 to 500</option> 
-              </select>
+          <select name="guest_count">
+            <option value="1 to 20">Guests: 1 to 20</option>
+            <option value="20 to 50">Guests: 20 to 50</option>
+            <option value="50 to 100">Guests: 50 to 100</option>
+            <option value="100 to 200">Guests: 100 to 200</option>
+            <option value="200 to 500">Guests: 200 to 500</option>
+          </select>
         </th>
         <th>
           <!-- Date pickup to select dates -->
-            <form>
-                <input type="date" value="2022-01-01" class="StartDate" name="Start date">
-            </form>
+          <form>
+            <input type="date" value="2022-01-01" class="StartDate" name="Start date">
+          </form>
         </th>
         <th>
-            <select name="Nights">
-              <option value="1 night">1 night</option>
-              <option value="2 night">2 nights</option>
-              <option value="3 night">3 nights</option>
-              <option value="4 night">4 nights</option>
-              <option value="5 night">5 nights</option>
-              <option value="6 night">6 nights</option>
-              <option value="7 night">7 nights</option>
-              <option value="8 night">8 nights</option> 
-            </select>
+          <select name="Nights">
+            <option value="1 night">1 night</option>
+            <option value="2 night">2 nights</option>
+            <option value="3 night">3 nights</option>
+            <option value="4 night">4 nights</option>
+            <option value="5 night">5 nights</option>
+            <option value="6 night">6 nights</option>
+            <option value="7 night">7 nights</option>
+            <option value="8 night">8 nights</option>
+          </select>
         </th>
-    </tr>
+      </tr>
 
- 
-</table> 
-<input type="submit" class="custom-btn btn-6" value="Enquire" onclick="SignUpError()"><span></span>
-<label class="image_label">Take a closer look to the events we hosted</label><br>
-<span><a href="#"></a></span>
-<!-- image pannel -->
-<div class="image-row">
-    <div class="column">
-      <img src="pannel1.jpg" alt="Snow" style="width:100%" class="picture">
-    </div>
-    <div class="column">
-      <img src="pannel2.jpeg" alt="Forest" style="width:100%" class="picture">
-    </div>
-    <div class="column">
-      <img src="pannel3.jpg" alt="Mountains" style="width:100%" class="picture">
-    </div>
-  </div>
-  <div class="image-row2">
-    <div class="column2">
-      <img src="pannel4.jpeg" alt="Snow" style="width:100%" class="picture">
-    </div>
-    <div class="column2">
-      <img src="pannel4.jpg" alt="Forest" style="width:100%" class="picture">
-    </div>
-    <div class="column2">
-      <img src="pannel6.jpg" alt="Mountains" style="width:100%" class="picture">
-    </div>
-  </div>
-  <!-- Review -->
-  <h2 class="AddReview">Add Review</h2>
-<button id="review-add-btn" aria-label="add review" title="Add Review"></button>
-<div id="modal" role="dialog" aria-modal="true" aria-labelledby="add-review-header" class="">
-  <button class="close-btn" aria-label="close" title="Close">x</button>
-  <div id="review-form-container">
-    <h2 id="add-review-header">Add Review</h2>
-    <form id="review-form">
-      <div class="fieldset">
-        <label for="reviewName">Name</label>
-        <input name="reviewName" id="reviewName" required="">
-      </div>
-      <div class="fieldset">
-        <label>Rating</label>
-        <div class="rate">
-          <input type="radio" id="star5" name="rate" value="5" onkeydown="navRadioGroup(event)" onfocus="setFocus(event)" required="">
-          <label for="star5" title="5 stars">5 stars</label>
-          <input type="radio" id="star4" name="rate" value="4" onkeydown="navRadioGroup(event)">
-          <label for="star4" title="4 stars">4 stars</label>
-          <input type="radio" id="star3" name="rate" value="3" onkeydown="navRadioGroup(event)">
-          <label for="star3" title="3 stars">3 stars</label>
-          <input type="radio" id="star2" name="rate" value="2" onkeydown="navRadioGroup(event)">
-          <label for="star2" title="2 stars">2 stars</label>
-          <input type="radio" id="star1" name="https://codepen.io/pen/rate" value="1" onkeydown="navRadioGroup(event)" onfocus="setFocus(event)">
-          <label for="star1" title="1 star">1 star</label>
-        </div>
-      </div>
 
-      <div class="fieldset">
-        <label for="reviewComments">Comments</label>
-        <textarea name="reviewComments" id="reviewComments" cols="20" rows="5" required=""></textarea>
+    </table>
+    <input type="submit" class="custom-btn btn-6" value="Enquire" onclick="SignUpError()"><span></span>
+    <label class="image_label">Take a closer look to the events we hosted</label><br>
+    <span><a href="#"></a></span>
+    <!-- image pannel -->
+    <div class="image-row">
+      <div class="column">
+        <img src="./images/pannel1.jpg" alt="Snow" style="width:100%" class="picture">
       </div>
-      <div class="fieldset right">
-        <button id="submit-review-btn">Save</button>
+      <div class="column">
+        <img src="./images/pannel2.jpeg" alt="Forest" style="width:100%" class="picture">
       </div>
-    </form>
-  </div>
-</div>
-
-<div class="modal-overlay"></div>
-  
-  <a href="" class="bottom-queries">Contact us for any queries</a>  
-  <div class="modal-overlay2"></div>
-
-  <!-- signup page -->
-  <div id="modal2" role="dialog" aria-modal="true" aria-labelledby="add-review-header" class="">
-    <button class="close-btn2" aria-label="close" title="Close">x</button>
-    <div id="review-form2-container">
-      <h2 id="add-review-header">Sign Up</h2>
-      <form id="review-form2">
-        <div class="fieldset2">
-          <label for="username">Username</label>
-          <input name="username" id="username" required="">
-        </div>
-        <div class="fieldset2">
-        </div>
-  
-        <div class="fieldset2">
-          <label for="Loginpassword">Password</label>
-          <input type="password" name="Loginpassword" id="Loginpassword" required="">
-        </div>
-        <div class="fieldset2right">
-          <button id="submit-login-btn" onclick="checkCred()">Sign In</button>
-        </div>
-      </form>
+      <div class="column">
+        <img src="./images/pannel3.jpg" alt="Mountains" style="width:100%" class="picture">
+      </div>
     </div>
-  </div>
-</main> 
-<div class="footer-basic">
+    <div class="image-row2">
+      <div class="column2">
+        <img src="./images/pannel4.jpeg" alt="Snow" style="width:100%" class="picture">
+      </div>
+      <div class="column2">
+        <img src="./images/pannel4.jpg" alt="Forest" style="width:100%" class="picture">
+      </div>
+      <div class="column2">
+        <img src="./images/pannel6.jpg" alt="Mountains" style="width:100%" class="picture">
+      </div>
+    </div>
+    <!-- Review -->
+    <h2 class="AddReview">Add Review</h2>
+    <button id="review-add-btn" aria-label="add review" title="Add Review"></button>
+    <div id="modal" role="dialog" aria-modal="true" aria-labelledby="add-review-header" class="">
+      <button class="close-btn" aria-label="close" title="Close">x</button>
+      <div id="review-form-container">
+        <h2 id="add-review-header">Add Review</h2>
+        <form id="review-form">
+          <div class="fieldset">
+            <label for="reviewName">Name</label>
+            <input name="reviewName" id="reviewName" required="">
+          </div>
+          <div class="fieldset">
+            <label>Rating</label>
+            <div class="rate">
+              <input type="radio" id="star5" name="rate" value="5" onkeydown="navRadioGroup(event)"
+                onfocus="setFocus(event)" required="">
+              <label for="star5" title="5 stars">5 stars</label>
+              <input type="radio" id="star4" name="rate" value="4" onkeydown="navRadioGroup(event)">
+              <label for="star4" title="4 stars">4 stars</label>
+              <input type="radio" id="star3" name="rate" value="3" onkeydown="navRadioGroup(event)">
+              <label for="star3" title="3 stars">3 stars</label>
+              <input type="radio" id="star2" name="rate" value="2" onkeydown="navRadioGroup(event)">
+              <label for="star2" title="2 stars">2 stars</label>
+              <input type="radio" id="star1" name="https://codepen.io/pen/rate" value="1"
+                onkeydown="navRadioGroup(event)" onfocus="setFocus(event)">
+              <label for="star1" title="1 star">1 star</label>
+            </div>
+          </div>
+
+          <div class="fieldset">
+            <label for="reviewComments">Comments</label>
+            <textarea name="reviewComments" id="reviewComments" cols="20" rows="5" required=""></textarea>
+          </div>
+          <div class="fieldset right">
+            <button id="submit-review-btn">Save</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="modal-overlay"></div>
+
+    <a href="" class="bottom-queries">Contact us for any queries</a>
+    <div class="modal-overlay2"></div>
+
+    <!-- signup page -->
+    <div id="modal2" role="dialog" aria-modal="true" aria-labelledby="add-review-header" class="">
+      <button class="close-btn2" aria-label="close" title="Close">x</button>
+      <div id="review-form2-container">
+        <h2 id="add-review-header">Sign Up</h2>
+        <form id="review-form2">
+          <div class="fieldset2">
+            <label for="username">Username</label>
+            <input name="username" id="username" required="">
+          </div>
+          <div class="fieldset2">
+          </div>
+
+          <div class="fieldset2">
+            <label for="Loginpassword">Password</label>
+            <input type="password" name="Loginpassword" id="Loginpassword" required="">
+          </div>
+          <div class="fieldset2right">
+            <button id="submit-login-btn" onclick="checkCred()">Sign In</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </main>
+  <div class="footer-basic">
     <footer>
-        <div class="social">
+      <div class="social">
         <a href="#"><i class="icon ion-social-instagram"></i></a>
         <a href="#"><i class="icon ion-social-snapchat"></i></a>
         <a href="#"><i class="icon ion-social-twitter"></i></a>
-        <a href="#"><i class="icon ion-social-facebook"></i></a></div>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Home</a></li>
-            <li class="list-inline-item"><a href="#">Services</a></li>
-            <li class="list-inline-item"><a href="#">About</a></li>
-            <li class="list-inline-item"><a href="#">Terms</a></li>
-            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-        </ul>
-        <p class="copyright">Mosaic Planners © 2021</p>
+        <a href="#"><i class="icon ion-social-facebook"></i></a>
+      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Home</a></li>
+        <li class="list-inline-item"><a href="#">Services</a></li>
+        <li class="list-inline-item"><a href="#">About</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+      </ul>
+      <p class="copyright">Mosaic Planners © 2021</p>
     </footer>
-</div>
-<!-- connecting javascript -->
-<script src="HomePage.js"></script> 
+  </div>
+  <!-- connecting javascript -->
+  <script src="./js/homePage.js"></script>
 </body>
+
 </html>
-
-
-
-
