--- a/collaborate/HotelBooking.html
+++ b/collaborate/HotelBooking.html
@@ -28,7 +28,7 @@
         <ul class="navbar-bottom">
             <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                 <ul>
-                    <li><a href="">Event Booking</a></li>
+                    <li><a href="./homePage.html">Event Booking</a></li>
                     <li><a href="">Corporate Booking</a></li>
                     <li><a href="">Help Desk</a></li>
                 </ul>
