--- a/collaborate/SignUp.html
+++ b/collaborate/SignUp.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="SignUp.css">
-    <link rel="icon" href="logo.png">
-    <title>SignUp</title>
-</head>  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/signUp.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <title>SignUp</title>
+</head>
+
 <body>
-<div class="area" >
+  <div class="area">
     <div id="login-box">
-        <div class="left">
-          <h1>Sign up</h1>
-          <main>
+      <div class="left">
+        <h1>Sign up</h1>
+        <main>
           <!-- registration form -->
           <form name="registration" class="registartion-form" onsubmit="return formValidation()">
-          <input type="text" id="name" name="name" placeholder="Name" />
-          <input type="text" id="email" name="email" placeholder="E-mail" />
-          <input type="password" id="password" name="password" placeholder="Password" />
-          <input type="password" id="password2" name="password2" placeholder="Retype password" />
-          <input type="text" id="phoneNumber" name="phone" placeholder="Phone Number" />
-          <label for="gender">Gender:</label>
-          Male: <input type="radio" name="gender" value="male">
-          Female: <input type="radio" name="gender" value="female">
-          Other: <input type="radio" name="gender" value="other">
-          <br><br><input type="text" id="zipcode" name="zip" placeholder="Postal code" />
-          <input type="submit" class="submit" name="signup_submit" value="Sign me up" />
+            <input type="text" id="name" name="name" placeholder="Name" />
+            <input type="text" id="email" name="email" placeholder="E-mail" />
+            <input type="password" id="password" name="password" placeholder="Password" />
+            <input type="password" id="password2" name="password2" placeholder="Retype password" />
+            <input type="text" id="phoneNumber" name="phone" placeholder="Phone Number" />
+            <label for="gender">Gender:</label>
+            Male: <input type="radio" name="gender" value="male">
+            Female: <input type="radio" name="gender" value="female">
+            Other: <input type="radio" name="gender" value="other">
+            <br><br><input type="text" id="zipcode" name="zip" placeholder="Postal code" />
+            <input type="submit" class="submit" name="signup_submit" value="Sign me up" />
           </form>
-        </div>
-        <!-- Social media buttons -->
-        <div class="right">
-          <span class="loginwith">Sign in with<br />social network</span>
-          <button class="social-signin facebook">Log in with facebook</button>
-          <button class="social-signin twitter">Log in with Twitter</button>
-          <button class="social-signin google">Log in with Google+</button>
-        </div>
-        <div class="or">OR</div>
+      </div>
+      <!-- Social media buttons -->
+      <div class="right">
+        <span class="loginwith">Sign in with<br />social network</span>
+        <button class="social-signin facebook">Log in with facebook</button>
+        <button class="social-signin twitter">Log in with Twitter</button>
+        <button class="social-signin google">Log in with Google+</button>
+      </div>
+      <div class="or">OR</div>
     </div>
-      <script src="SignUp.js"></script>
+    <script src="./js/signUp.js"></script>
     </main>
     <footer>
-        <!-- Providing background effect -->
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
-      </footer>
-</div >
+      <!-- Providing background effect -->
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </footer>
+  </div>
 </body>
+
 </html>
