--- a/collaborate/travelplannerrequest.html
+++ b/collaborate/travelplannerrequest.html
@@ -28,7 +28,7 @@
         <ul class="navbar-bottom">
             <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                 <ul>
-                    <li><a href="">Event Booking</a></li>
+                    <li><a href="./homePage.html">Event Booking</a></li>
                     <li><a href="">About Us</a></li>
                     <li><a href="">Help Desk</a></li>
                 </ul>
@@ -42,8 +42,8 @@
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                 <ul>
-                    <li><a href="./HotelBooking.html">Hotel Booking</a></li>
-                    <li><a href="./MotelBooking.html">Motel Booking</a></li>
+                    <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+                    <li><a href="./motelBooking.html">Motel Booking</a></li>
                     <li><a href="">Rental Apartments</a></li>
                 </ul>
             </li>
