--- a/collaborate/flights.html
+++ b/collaborate/flights.html
@@ -5,30 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/index.css">
+    <title>Flights</title>
+    <link rel="stylesheet" href="css/flight.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script src="https://kit.fontawesome.com/dc0fc0f185.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar-top">
                 <div class="nav-inner-container">
-                    <a href="./index.html"><img src="img/logo.png" alt="" srcset=""></a>
+                    <a href="./index.html"><img src="./images/logo.png" alt="" srcset=""></a>
                     <h2>Mosaic Planners</h2>
-                </div>
-                <div class="nav-button-container">
-                    <button>Register</button>
-                    <button>Sign In</button>
                 </div>
             </div>
             <ul class="navbar-bottom">
                 <li><a href="#" alt="Home"><i class="fas fa-home"></i> Home</a>
                     <ul>
-                        <li><a href="">Event Booking</a></li>
+                        <li><a href="./homePage.html">Event Booking</a></li>
                         <li><a href="">Corporate Booking</a></li>
                         <li><a href="">Help Desk</a></li>
                     </ul>
@@ -44,15 +41,15 @@
                 </li>
                 <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                     <ul>
-                        <li><a href="">Hotel Booking</a></li>
-                        <li><a href="">Motel Booking</a></li>
+                        <li><a href="./hotelBooking.html">Hotel Booking</a></li>
+                        <li><a href="./motelBooking.html">Motel Booking</a></li>
                         <li><a href="">Rental Apartments</a></li>
                     </ul>
                 </li>
                 <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                     <ul>
-                        <li><a href="" target="_blank">Flight Booking</a></li>
-                        <li><a href="">Train Booking</a></li>
+                        <li><a href="./flights.html">Flight Booking</a></li>
+                        <li><a href="./train.html">Train Booking</a></li>
                         <li><a href="">Roadway Booking</a></li>
                     </ul>
                 </li>
@@ -67,15 +64,15 @@
         </nav>
     </header>
 <div class="header_page">
-    <div><a href="" target="_blank" class="a_link">Flights</a></div>
-        <div><a href="train.html" target="_blank" class="a_link">Train</a></div>
-        <div><a href="roadway.html" target="_blank" class="a_link">Roadway</a></div>
+    <div><a href="./flights.html"  class="a_link">Flights</a></div>
+        <div><a href="./train.html" class="a_link">Train</a></div>
+        <div><a href="roadway.html" class="a_link">Roadway</a></div>
 </div>
 <div class="banner">
-    <img src="img/img3.png"/>
+    <img src="./images/img3.png"/>
     <div class="banner_con">
         <div class="banner_con_title">
-            <img src="img/fj.png" width="50"/>
+            <img src="./images/fj.png" width="50"/>
             <div>Flights</div>
         </div>
         <div class="chat">
@@ -114,7 +111,7 @@
         </div>
         <div class="banner_con_text">Please contact us in case of difficulties</div>
     </div>
-    <div class="car"><img src="img/qc.png" height="64" width="64"/></div>
+    <div class="car"><img src="./images/qc.png" height="64" width="64"/></div>
     <div class="banner_title">
         Ticket purchase options
     </div>
@@ -176,6 +173,6 @@
 
     </div>
 </div>
-<script src="js/index.js"></script>
+<script src="./js/flight.js"></script>
 </body>
 </html>
