--- a/collaborate/pages/ticket.html
+++ b/collaborate/pages/ticket.html
@@ -13,12 +13,8 @@
         <nav>
             <div class="navbar-top">
                 <div class="nav-inner-container">
-                    <a href="./index.html"><img src="img/logo.png" alt="" srcset=""></a>
+                    <a href="../index.html"><img src="../images/logo.png" alt="" srcset=""></a>
                     <h2>Mosaic Planners</h2>
-                </div>
-                <div class="nav-button-container">
-                    <button>Register</button>
-                    <button>Sign In</button>
                 </div>
             </div>
             <ul class="navbar-bottom">
@@ -40,8 +36,8 @@
                 </li>
                 <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                     <ul>
-                        <li><a href="">Hotel Booking</a></li>
-                        <li><a href="">Motel Booking</a></li>
+                        <li><a href="../hotelBooking.html">Hotel Booking</a></li>
+                        <li><a href="../motelBooking.html">Motel Booking</a></li>
                         <li><a href="">Rental Apartments</a></li>
                     </ul>
                 </li>
@@ -54,9 +50,9 @@
                 </li>
                 <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
                     <ul>
-                        <li><a href="./touristpackages.html">Tourist Packages</a></li>
-                        <li><a href="./localguides.html">Local Guides</a></li>
-                        <li><a href="./travelplanner">Personal Travel Planner</a></li>
+                        <li><a href="../touristpackages.html">Tourist Packages</a></li>
+                        <li><a href="../localguides.html">Local Guides</a></li>
+                        <li><a href="../travelplanner">Personal Travel Planner</a></li>
                     </ul>
                 </li>
             </ul>
