--- a/mainU.html
+++ b/mainU.html
@@ -52,7 +52,7 @@
             </li>
             <li><a href="#" alt="Accommodation"><i class="fas fa-bed"></i> Accommodation</a>
                 <ul>
-                    <li><a href="">Hotel Booking</a></li>
+                    <li><a href="./hotelBooking.html">Hotel Booking</a></li>
                     <li><a href="">Motel Booking</a></li>
                     <li><a href="">Rental Apartments</a></li>
                 </ul>
