--- a/collaborate/touristpackages.html
+++ b/collaborate/touristpackages.html
@@ -49,8 +49,8 @@
             </li>
             <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                 <ul>
-                    <li><a href="">Flight Booking</a></li>
-                    <li><a href="">Train Booking</a></li>
+                    <li><a href="./flights.html">Flight Booking</a></li>
+                    <li><a href="./train.html">Train Booking</a></li>
                     <li><a href="">Roadway Booking</a></li>
                 </ul>
             </li>
