--- a/collaborate/travelplannerrequest.html
+++ b/collaborate/travelplannerrequest.html
@@ -49,8 +49,8 @@
             </li>
             <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
                 <ul>
-                    <li><a href="">Flight Booking</a></li>
-                    <li><a href="">Train Booking</a></li>
+                    <li><a href="./flights.html">Flight Booking</a></li>
+                    <li><a href="./train.html">Train Booking</a></li>
                     <li><a href="">Roadway Booking</a></li>
                 </ul>
             </li>
@@ -94,6 +94,7 @@
                 <div class="form-group">
                     <label for="trip-end-date">Trip End Date:</label>
                     <input type="date" name="trip-end-date" id="trip-end-date" min="">
+                    <div class="invalid-feedback">Please enter a valid End Date</div>
                 </div>
                 <div class="form-group">
                     <label for="location">Desired Location(s):</label>
