--- a/allthreefeatures/train.html
+++ b/allthreefeatures/train.html
@@ -74,29 +74,29 @@
         <div>
        <img id="img1" src="img/b1.jpg" width=501px height=430px>
         <p>【The city of software---Banglore】</p>
-        <a href="pages/ticket.html" target="blank">*GET TICKETS*</a>
+        <a href="subpages/ticket.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
        <img id="img2" src="img/d1.jpg" width=500px height=430px>
         <p>【The capital city of India---Delhi】</p>
-        <a href="pages/ticket1.html" target="blank">*GET TICKETS*</a>
+        <a href="subpages/ticket1.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
        <img id="img3" src="img/h1.jpg" width=500px height=430px>
        <p>【The city of culture---Hyderabad】</p>
-       <a href="pages/ticket2.html" target="blank">*GET TICKETS*</a>
+       <a href="subpages/ticket2.html" target="blank">*GET TICKETS*</a>
         </div>
     </div>
     <div class="bigger">
         <div>
         <img id="img4" src="img/m1.jpg" width=500px height=430px>
        <p>【The city by the Sea---Mumbai】</p>
-       <a href="pages/ticket3.html" target="blank">*GET TICKETS*</a>
+       <a href="subpages/ticket3.html" target="blank">*GET TICKETS*</a>
         </div>
         <div>
        <img id="img5" src="img/u1.jpg" width=500px height=430px>
         <p>【The city of lake---Udaipur】</p>  
-        <a href="pages/ticket4.html" target="blank">*GET TICKETS*</a>
+        <a href="subpages/ticket4.html" target="blank">*GET TICKETS*</a>
         </div>
     </div>
 </body>
