--- a/collaborate/HomePage.html
+++ b/collaborate/HomePage.html
@@ -55,9 +55,9 @@
         </li>
         <li><a href="#" alt="Transportation"><i class="fas fa-taxi"></i> Transportation</a>
           <ul>
-            <li><a href="">Flight Booking</a></li>
-            <li><a href="">Train Booking</a></li>
-            <li><a href="">Roadway Booking</a></li>
+            <li><a href="../allthreefeatures/1018index.html">Flight Booking</a></li>
+            <li><a href="../allthreefeatures/train.html">Train Booking</a></li>
+            <li><a href="../allthreefeatures/roadway.html">Roadway Booking</a></li>
           </ul>
         </li>
         <li><a href="#" alt="Tourism"><i class="fas fa-globe-americas"></i> Tourism</a>
